# xhs_auto_pipeline

./: .env.example  .gitignore  .gitmodules  ENV_SETUP.md  README.md  README_anti_bot.md  analyze_trends.py  check_path.py  constants.py  debug_trends.py  example_xiaohongshu_content.json  json_format_test.py  pyproject.toml  requirements.txt  run_pipeline.py  run_workflow.py  smart_llm_call_test_results.json  test_content_generation.py  test_direct_google.py  test_extraction_methods.py  test_proxy_direct.py  test_pytrends.py  test_serpapi.py  test_services.py  test_simple_playwright.py  test_trend_fetching.py
docs/: LOGGING.md  TREND_FETCHING.md
llm/: __init__.py  (+5 more)
web_scraping_toolkit_old/: README.md  pyproject.toml  test_fetch_trends.py
web_scraping_toolkit_old/examples/: basic_usage.py  env.example  news_scraper.py  trends_example.py
web_scraping_toolkit_old/examples/results/: trend_scores_20250514_172241.json  trends_results_20250514_170809.json  weighted_keywords_20250514_172241.json
web_scraping_toolkit_old/src/web_scraping_toolkit/: __init__.py  scraper.py
web_scraping_toolkit_old/src/web_scraping_toolkit/cache/: cache_mechanism.py
web_scraping_toolkit_old/src/web_scraping_toolkit/captcha/: captcha_solver.py
web_scraping_toolkit_old/src/web_scraping_toolkit/content/: __init__.py  content_fetcher.py  news_cache.py
web_scraping_toolkit_old/src/web_scraping_toolkit/proxy/: proxy_manager.py
web_scraping_toolkit_old/test_results/: article_extraction_test_results.json  news_fetch_test_results.json  pipeline_test_results.json  trends_test_results.json
(+29 files in other folders)
